# easy-robo-advisors

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  portfolio.csv  pyproject.toml
.github/workflows/: ci.yaml
Easy_Robo_Advisors/config/: portfolio.csv
easy_robo_advisors/: __init__.py  portfolio.py
easy_robo_advisors/config/: portfolio.csv
tests/: __init__.py  test_easy_robo_advisors.py
