[tool.poetry]
name = "easy-robo-advisors"
version = "1.0.1"
description = ""
authors = ["Yoiduki <90896806+y-muen@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.0.4"
matplotlib = "^3.5.1"
plotly = "^5.7.0"
nbformat = "^5.3.0"
assets-checker = {git = "https://github.com/y-muen/assets-checker", rev = "main"}
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
